# emacs-module-rs

./: .gitignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  azure-pipelines.yml  build.rs
.azure-pipelines/: main.yml
.azure-pipelines/steps/: -test.yml  install-cask.yml  install-emacs.yml  install-rust.yml  set-up-llvm.yml  setup-cask.yml  setup-emacs.yml
.claude/: CLAUDE.md
.claude/rules/: code-comments.md  rust.md
.claude/skills/changelog/: SKILL.md
.claude/skills/guide-writing/: SKILL.md
.github/workflows/: doc.yml  main.yml  shell.yml
.vm/windows/: .gitignore  Autounattend.xml  INSTALL.md  SETUP.md  boot-vm.sh  bootstrap.ps1  create-vm.sh  download-isos.sh  get-vm-ip.sh  prepare-iso.sh  setup-ssh-key.sh  setup-virtiofs.ps1  share.sh
emacs-macros/: Cargo.toml  README.md
emacs-macros/src/: func.rs  lib.rs  lisp_args.rs  module.rs  util.rs
emacs-module/: .gitattributes  Cargo.toml  README.md  bindgen_config.rs  build.rs
emacs-module/include/: emacs-module-28.h  emacs-module.h
emacs-module/src/: emacs-module-28.rs  emacs-module.rs  lib.rs
guide/: book.toml  custom.css  hljs-load-langs.js
guide/src/: SUMMARY.md  calling-lisp.md  custom-types.md  errors.md  functions.md  hello.md  module.md  open-channel.md  overview.md  reloading.md  testing.md  type-conversions.md
guide/theme/: head.hbs
rs-module/: Cargo.toml  README.md
rs-module/src/: lib.rs
src/: call.rs  convert.rs  emacs_gen.rs  emacs_module.rs  env.rs  error.rs  func.rs  global.rs  globals.rs  hlapi.rs  init.rs  lib.rs  macros.rs  new.rs  raw.rs  subr.rs  symbol.rs  value.rs
src/types/: float.rs  global.rs  integer.rs  mod.rs  string.rs  user_ptr.rs  vector.rs
test-module/: Cargo.toml  README.md
test-module-28/: Cargo.toml
test-module-28/src/: lib.rs  test_channel.rs
test-module-28/tests/: main.el
test-module/src/: call.rs  hash_map.rs  lib.rs  macros.rs  ref_cell.rs  test.el  test_basics.rs  test_eq.rs  test_error.rs  test_lifetime.rs  test_transfer.rs  test_vector.rs  vector.rs
test-module/tests/: main.el
