[package]
name = "emacs"
version = "0.10.2"
edition = "2018"
description = "Rust library for creating Emacs's dynamic modules"
homepage = "https://github.com/ubolonton/emacs-module-rs"
documentation = "https://ubolonton.github.io/emacs-module-rs/"
authors = [
    "Aaron France <aaron.l.france@gmail.com>",
    "Joey Ezechiëls <joey.ezechiels@gmail.com>",
    "Nguyễn Tuấn Anh <ubolonton@gmail.com>",
]
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["emacs", "emacs-module", "ffi"]
categories = ["api-bindings", "development-tools::ffi"]
include = [
    "Cargo.toml",
    ".rustfmt.toml",
    "CHANGELOG.md",
    "README.md",
    "src/**/*"
]

[dependencies]
failure = { version = "0.1.1", features = ["std"] }
failure_derive = "0.1.1"
lazy_static = "1.3.0"
ctor = "0.1.7"
emacs_module = { path = "emacs-module", version = "0.10.0" }
emacs-macros = { path = "emacs-macros", version = "0.10.2" }

[features]
utf-8-validation = []
lossy-integer-conversion = []

[workspace]
members = [
    ".",
    "test-module",
    "rs-module",
]
