[package]
name = "emacs"
version = "0.18.0"
edition = "2021"
description = "Rust library for creating Emacs's dynamic modules"
homepage = "https://github.com/ubolonton/emacs-module-rs"
documentation = "https://ubolonton.github.io/emacs-module-rs/"
authors = [
    "Aaron France <aaron.l.france@gmail.com>",
    "Joey Ezechiëls <joey.ezechiels@gmail.com>",
    "Nguyễn Tuấn Anh <ubolonton@gmail.com>",
]
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["emacs", "emacs-module", "ffi"]
categories = ["api-bindings", "development-tools::ffi"]
include = [
    "Cargo.toml",
    ".rustfmt.toml",
    "CHANGELOG.md",
    "README.md",
    "src/**/*"
]

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
ctor = "0.1.12"
once_cell = "1.2.0"
emacs_module = { path = "emacs-module", version = "0.18.0" }
emacs-macros = { path = "emacs-macros", version = "0.17.0" }

[build-dependencies]
rustc_version = "0.2.3"

[features]
default = []
utf-8-validation = []
lossy-integer-conversion = []
# This feature is intended as a workaround when building on new untested platforms. If the crate
# cannot be built without this feature, please report the issue at
# https://github.com/ubolonton/emacs-module-rs/issues/new.
bindgen = ["emacs_module/bindgen"]

[workspace]
members = [
    ".",
    "test-module",
    "rs-module",
]
