[package]
name = "emacs-macros"
version = "0.17.0"
edition = "2018"
description = "Proc macros for emacs modules"
homepage = "https://github.com/ubolonton/emacs-module-rs"
authors = [
    "Nguyễn Tuấn Anh <ubolonton@gmail.com>",
]
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["emacs", "emacs-module"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1"
darling = "0.10"
