[package]
name = "emacs_module"
version = "0.16.2"
edition = "2018"
description = "Raw FFI for emacs-module"
homepage = "https://github.com/ubolonton/emacs-module-rs"
authors = [
    "Aaron France <aaron.l.france@gmail.com>",
    "Joey Ezechiëls <joey.ezechiels@gmail.com>",
    "Nguyễn Tuấn Anh <ubolonton@gmail.com>",
]
license = "BSD-3-Clause"
