[package]
name = "emacs_module"
version = "0.20.0"
edition = "2018"
description = "Raw FFI for emacs-module"
homepage = "https://github.com/ubolonton/emacs-module-rs"
authors = [
    "Aaron France <aaron.l.france@gmail.com>",
    "Joey Ezechiëls <joey.ezechiels@gmail.com>",
    "Nguyễn Tuấn Anh <ubolonton@gmail.com>",
]
license = "BSD-3-Clause"
build = "build.rs"

[dependencies]
bindgen = { version = "0.72.1", optional = true }

[build-dependencies]
bindgen = { version = "0.72.1", optional = true }

[features]
default = []
emacs-28 = []

[[bin]]
name = "gen-bindings"
path = "src/bin/gen-bindings.rs"
required-features = ["bindgen"]
