[package]
name = "emacs_module"
version = "0.21.0"
edition = "2024"
description = "Raw FFI for emacs-module"
homepage = "https://github.com/ubolonton/emacs-module-rs"
authors = [
    "Aaron France <aaron.l.france@gmail.com>",
    "Joey Ezechiëls <joey.ezechiels@gmail.com>",
    "Nguyễn Tuấn Anh <ubolonton@gmail.com>",
]
license = "BSD-3-Clause"
build = "build.rs"

[dependencies]
bindgen = { version = "0.72.1", optional = true, features = ["prettyplease"] }

[build-dependencies]
bindgen = { version = "0.72.1", optional = true, features = ["prettyplease"] }

[features]
default = []
emacs-28 = []
# Code-time generation, via a binary that generates bindings as source code.
bindgen-code = ["bindgen"]
# Build-time generation.
bindgen-build = ["bindgen"]

[[bin]]
name = "gen-bindings"
path = "src/bin/gen-bindings.rs"
required-features = ["bindgen-code"]
