[package]
name = "emacs-rs-module"
version = "0.11.0"
edition = "2018"
authors = ["Nguyễn Tuấn Anh <ubolonton@gmail.com>"]
description = "An Emacs dynamic module that helps developing other dynamic modules, in Rust"
license = "BSD-3-Clause"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
libloading = "0.5.2"
emacs = { path = "..", version = "0.11.0" }
