[package]
name = "emacs-rs-module"
version = "0.21.0"
edition = "2021"
authors = ["Nguyễn Tuấn Anh <ubolonton@gmail.com>"]
description = "An Emacs dynamic module that helps developing other dynamic modules, in Rust"
license = "BSD-3-Clause"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
libloading = "0.9.0"
emacs = { path = "..", version = "0.21.0" }
