[package]
name = "test-module"
version = "0.8.0"
edition = "2018"
authors = ["Nguyễn Tuấn Anh <ubolonton@gmail.com>"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.3.0"
emacs = { path = "..", version = "0.8.0" }

[dev-dependencies]
emacs-rs-module = { path = "../rs-module", version = "0.7.0" }
