[package]
name = "test-module"
version = "0.0.0"
edition = "2018"
authors = ["Nguyễn Tuấn Anh <ubolonton@gmail.com>"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4"
once_cell = "1.2.0"
emacs = { path = ".." }

[dev-dependencies]
emacs-rs-module = { path = "../rs-module" }
