[package]
name = "test-module"
version = "0.0.0"
edition = "2021"
authors = ["Nguyễn Tuấn Anh <ubolonton@gmail.com>"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
emacs = { path = ".." }

[dev-dependencies]
emacs-rs-module = { path = "../rs-module" }

[features]
bindgen = ["emacs/bindgen"]
